dashboard/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
      - tekton.dashboard.<INGRESS_ROUTER_HOSTNAME> 
      secretName: tekton-dashboard-tls
  rules:
    - host: tekton.dashboard.<INGRESS_ROUTER_HOSTNAME> 
      http:
        paths:
          - path: /
            backend:
              serviceName: tekton-dashboard
              servicePort: 9097
